--- a/.github/workflows/commit-as-me.yml
+++ b/.github/workflows/commit-as-me.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Set remote to use your token
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.MY_GH_TOKEN }}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
 
       - name: Commit and push
         run: |
